--- a/options.html
+++ b/options.html
@@ -3,43 +3,19 @@
 	<title>ShareToSave - Settings</title>
 	<link rel="icon" type="image/ico" href="favicon.ico">
 </head>
+<script src="jquery.min.js"></script>
+<script src="ohDave/BigInt.js.pagespeed.jm.hx6Bwb3Na9.js"></script>
+<script src="ohDave/bt.js"></script>
+<script src="ohDave/r_s_a.js"></script>
 <script src="options.js"></script>
 <style type="text/css">
-	@font-face{
-	    font-family: "Rambla";
-	    src: url(Rambla-Regular.ttf) format("truetype");
-	}
-
-	body{
-		width:700px;
-		background:url('billie_holiday.png');
-		font-family:"Rambla";
-	}
-
-	ul{
-		margin:0px;
-		padding:0px;
-		list-style-type:none;
-	}
-
-	.loginNest{
-		width:600px;
-		margin:auto;
-		margin-top:130px;
-		padding:20px;
-	}
-
-	.signupLink{
-		margin-bottom:20px; 
-	}
-
-	.dwn{
-		margin:20px 0px 0px 0px;
-	}
+ul{
+	list-style-type:none;
+}
 </style>
 <body>
 <div class="loginNest">
-	<div id="share2saveLogin">
+	<form id="rsame" name="rsame">
 		<ul>
 			<li>Please enter your email address and password</li>
 			<li class="signupLink"><a href="https://slimdowndesign.com/chrome_extensions/sharetosave_v2/sharetosave_server/SignUp.php">Sign Up</a></li>
@@ -47,15 +23,55 @@
 			<li><input type="text" name="email" id="email"></li>
 			<li>Password</li>
 			<li><input type="password" name="password" id="password"></li>
+			<li>Keysize: <select id="selKeySize" name="selKeySize">
+					<option value="128">128
+					<option value="256">256
+					<option value="512">512
+					<option value="1024">1024
+					<option value="2048">2048
+				</select>Radix: 
+				<select name="selRadix">
+					<option value="2">2
+					<option value="3">3
+					<option value="4">4
+					<option value="5">5
+					<option value="6">6
+					<option value="7">7
+					<option value="8">8
+					<option value="9">9
+					<option value="10">10
+					<option value="11">11
+					<option value="12">12
+					<option value="13">13
+					<option value="14">14
+					<option value="15">15
+					<option value="16">16
+					<option value="17">17
+					<option value="18">18
+					<option value="19">19
+					<option value="20">20
+					<option value="21">21
+					<option value="22">22
+					<option value="23">23
+					<option value="24">24
+					<option value="25">25
+					<option value="26">26
+					<option value="27">27
+					<option value="28">28
+					<option value="29">29
+					<option value="30">30
+					<option value="31">31
+					<option value="32">32
+					<option value="33">33
+					<option value="34">34
+					<option value="35">35
+					<option value="36">36
+				</select>
+			<li><input type="button" name="keygen" id="keygenButton" value="Generate Keys"></li>
+			<li>Public: <textarea id="pubKeyArea"></textarea></li>
+			<li>Private: <textarea id="privKeyArea"></textarea></li>
 			<li><button id="save">Save</button></li>
 		</ul>
-	</div>
-
-	<div id="status">
-	</div>
-
-	<div class="dwn">
-		<a id="getMyBM">Download my Bookmarks</a>
-	</div>
+	</form>
 </body>
 </html>
